--- a/bq-project/src/app/home/home-menu/home-menu-form/home-menu-form.component.html
+++ b/bq-project/src/app/home/home-menu/home-menu-form/home-menu-form.component.html
@@ -31,42 +31,7 @@
             <p class="card-text">{{ product.product.price }}</p>
           </div>
           <div class="card-body">
-            <button
-              type="button"
-              class="btn btn-danger mx-2"
-              [disabled]="product.qty <= 0"
-              (click)="product.qty = product.qty - 1"
-              style="
-                font-size: 0.5em;
-                width: 3em;
-                height: 3em;
-                border-radius: 100%;
-                text-align: center;
-                justify-content: center;
-              ">
-              <i class="fa-solid fa-minus"></i>
-            </button>
-            <span> {{ product.qty }} </span>
-            <button
-              type="button"
-              class="btn btn-warning mx-2"
-              (click)="product.qty = product.qty + 1"
-              style="
-                font-size: 0.5em;
-                width: 3em;
-                height: 3em;
-                border-radius: 100%;
-                text-align: center;
-                justify-content: center;
-              ">
-              <i class="fa-solid fa-plus"></i>
-            </button>
-            <a
-              class="btn"
-              style="margin: 0px 12px; font-size: 25%"
-              (click)="deleteProduct(product.product.id)">
-              <i class="fa-solid fa-trash" style="font-size: 380%"> </i>
-            </a>
+            <p class="card-text">Cantidad: {{ product.qty }}</p>
           </div>
         </div>
       </div>
