--- a/bq-project/src/app/home/home-menu/home-menu-list/home-menu-list.component.html
+++ b/bq-project/src/app/home/home-menu/home-menu-list/home-menu-list.component.html
@@ -32,16 +32,16 @@
       border-radius: 20px;
       box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
     "
-    *ngFor="let product of listProducts | filtroP: valueSearch:optionPCategory">
+    *ngFor="let product of productNew">
     <span
       class="badge bg-success rounded-pill mt-2"
       style="width: 7rem; align-items: center"
-      >{{ product.type }}</span
+      >{{ product.product.type }}</span
     >
     <img
       class="card-img mt-1"
       style="height: 3rem; width: 3rem"
-      src="{{ product.image }}"
+      src="{{ product.product.image }}"
       alt="Card image cap" />
     <div
       class="card-body"
@@ -53,16 +53,46 @@
         align-items: center;
       ">
       <h5 class="card-title" style="margin: 0">
-        #{{ product.id }} | {{ product.name }}
+        #{{ product.product.id }} | {{ product.product.name }}
       </h5>
       <p class="card-text" style="margin: 0">
-        <strong> Price: </strong>{{ product.price | currency: 'USD' }}
+        <strong> Price: </strong>{{ product.product.price | currency: 'USD' }}
       </p>
       <p class="data_entry" style="margin: 0">
-        <strong>Date: </strong>{{ product.dateEntry | date: 'short' }}
+        <strong>Date: </strong>{{ product.product.dateEntry | date: 'short' }}
       </p>
       <div class="btn-icons p-1 m-2">
         <button
+          type="button"
+          class="btn btn-danger mx-2"
+          [disabled]="product.qty <= 0"
+          (click)="shareProductDelete(product)"
+          style="
+            font-size: 0.5em;
+            width: 3em;
+            height: 3em;
+            border-radius: 100%;
+            text-align: center;
+            justify-content: center;
+          ">
+          <i class="fa-solid fa-minus"></i>
+        </button>
+        <span> {{ product.qty }} </span>
+        <button
+          type="button"
+          class="btn btn-warning mx-2"
+          (click)="shareProductPlus(product)"
+          style="
+            font-size: 0.5em;
+            width: 3em;
+            height: 3em;
+            border-radius: 100%;
+            text-align: center;
+            justify-content: center;
+          ">
+          <i class="fa-solid fa-plus"></i>
+        </button>
+        <!-- <button
           type="button"
           class="btn btn-warning mx-2"
           (click)="shareProduct(product)"
@@ -75,7 +105,7 @@
             justify-content: center;
           ">
           <i class="fa-solid fa-plus"></i>
-        </button>
+        </button> -->
         <!-- botones de agregar y quitar -->
         <!-- <button
           type="button"
