implement add and delete order

--- a/bq-project/src/app/home/home-menu/home-menu-form/home-menu-form.component.html
+++ b/bq-project/src/app/home/home-menu/home-menu-form/home-menu-form.component.html
@@ -56,9 +56,9 @@
           </div>
         </div>
       </div>
-      <hr/>
+      <hr />
       <span class="form-label">Total: </span>
-      <span> 100 </span>
+      <span> $100 </span>
       <div class="form-group mt-4 text-center">
         <input
           type="submit"
