--- a/bq-project/src/app/home/home.component.html
+++ b/bq-project/src/app/home/home.component.html
@@ -61,7 +61,7 @@
         <h1 class="badge-dashboard">DASHBOARD</h1>
         <h4 class="text-nav">Pepito el Mozo</h4>
         <span class="badge">Mozo</span>
-        <button type="button" class="btn-nav mt-3" routerLink="menu">
+        <button type="button" class="btn-nav mt-3" routerLink="menu/all">
           <i class="fa-solid fa-people-line"></i> Menú
         </button>
         <button type="button" class="btn-nav mt-4" routerLink="orders">
