Implementation, chef route, Api, roles filter

--- a/bq-project/src/app/admin/admin-user/admin-user-form/admin-user-form.component.html
+++ b/bq-project/src/app/admin/admin-user/admin-user-form/admin-user-form.component.html
@@ -42,21 +42,30 @@
       <br />
       <div class="form-check form-check-inline">
         <input
-          id="optionYes"
+          id="optionAdmin"
           type="radio"
-          value="true"
+          value="admin"
           name="roles"
           formControlName="roles" />
-        <label class="text-type" for="optionYes">Yes</label>
+        <label class="text-type" for="optionAdmin">Administrador</label>
       </div>
       <div class="form-check form-check-inline">
         <input
-          id="optionNo"
+          id="optionChef"
           type="radio"
-          value="false"
+          value="chef"
           name="roles"
           formControlName="roles" />
-        <label class="text-type" for="optionNo">No</label>
+        <label class="text-type" for="optionChef">Cocinero</label>
+      </div>
+      <div class="form-check form-check-inline">
+        <input
+          id="optionWeiter"
+          type="radio"
+          value="weiter"
+          name="roles"
+          formControlName="roles" />
+        <label class="text-type" for="optionWeiter">Mozo</label>
       </div>
       <div class="form-group mt-3 text-center">
         <input
