--- a/bq-project/src/app/admin/admin-user/admin-user-list/admin-user-list.component.html
+++ b/bq-project/src/app/admin/admin-user/admin-user-list/admin-user-list.component.html
@@ -5,8 +5,9 @@
   #txtSearch
   (change)="optionClick(txtSearch.value)">
   <option value="none" selected>Rol</option>
-  <option value="true">Administrador</option>
-  <option value="false">No Administrador</option>
+  <option value="admin">Administrador</option>
+  <option value="weiter">Mozo</option>
+  <option value="chef">Cocinero</option>
 </select>
 <div
   class="overflow-auto row p-2 mb-md-0 mr-md-3 scroller-container"
@@ -16,14 +17,14 @@
     style="box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2)"
     *ngFor="let worker of listWorkers | filter: valueSearch:optionAdmin">
     <div class="card-body">
-      <span class="badge rounded-pill mt-2" *ngIf="worker.roles.admin">
-        Administrador
+      <span class="badge rounded-pill mt-2">
+        {{ worker.roles.description }}
       </span>
       <h5 class="card-title m-1">#{{ worker.id }}</h5>
       <h5 class="card-title">{{ worker.email }}</h5>
-      <p class="card-text">
+      <!--  <p class="card-text">
         <strong> Contraseña: </strong>{{ worker.password }}
-      </p>
+      </p> -->
       <div class="btn-icons">
         <a class="btn" (click)="deleteUser(worker)">
           <i class="fa-solid fa-trash"> </i>
