Implement chef history, sort order and implement change status

--- a/bq-project/src/app/admin/admin-product/admin-products-form/admin-products-form.component.html
+++ b/bq-project/src/app/admin/admin-product/admin-products-form/admin-products-form.component.html
@@ -54,6 +54,10 @@
           <span>La url <strong>es obligatoria.</strong></span>
         </div>
       </div>
+      <div class="form-group">
+        <label class="form-label"> Fecha de pedido: </label>
+        <p class="form-control" formControlName="dateEntry">{{ dataOrder }}</p>
+      </div>
       <label for="validationType" class="form-label mt-4">Tipo</label>
       <br />
       <div class="form-check">
