update project and clean admin

--- a/bq-project/src/app/admin/admin-product/admin-product.component.html
+++ b/bq-project/src/app/admin/admin-product/admin-product.component.html
@@ -1,10 +1,8 @@
-<div class="row" style="justify-content: space-evenly; margin: 0">
-  <div
-    class="col-10 col-sm-8 bg-light"
-    style="border-radius: 25px; height: 480px;">
+<div class="row conteiner-produc-list-form">
+  <div class="adminList col-10 col-sm-8 bg-light">
     <app-admin-products-list></app-admin-products-list>
   </div>
-  <div class="col-10 col-sm-3" style="border-radius: 25px;">
+  <div class="adminform col-10 col-sm-3">
     <app-admin-products-form></app-admin-products-form>
   </div>
 </div>
