--- a/bq-project/src/app/admin/admin.component.html
+++ b/bq-project/src/app/admin/admin.component.html
@@ -1,6 +1,6 @@
 <section class="admin-section">
   <header>
-    <nav class="navbar navbar-expand-lg navbar-light" style="margin: 0">
+    <nav class="navbar navbar-expand-lg navbar-light container-nav">
       <div class="container-fluid">
         <a class="navbar-brand">
           <button
@@ -23,13 +23,11 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div
-          class="collapse navbar-collapse"
-          id="navbarSupportedContent"
-          style="gap: 6%">
-          <form class="d-flex" style="width: 70%; padding-left: 8%">
+          class="collapse navbar-collapse cont-collapse"
+          id="navbarSupportedContent">
+          <form class="d-flex form-Admin">
             <input
-              class="form-control me-2 bg-light"
-              style="height: 40px"
+              class="form-control search me-2 bg-light"
               type="text"
               placeholder="Buscar"
               aria-label="Search"
@@ -40,8 +38,7 @@
       </div>
     </nav>
   </header>
-  <!-- NavSIDE -->
-
+  <!-- NavSide de Admin -->
   <div
     class="offcanvas offcanvas-start"
     data-bs-scroll="true"
@@ -76,8 +73,8 @@
     </div>
   </div>
   <!-- componentes renderizados de user -->
-  <div class="row" style="justify-content: space-evenly; margin: 0">
-    <div class="col-12 col-sm-12" style="justify-content: center">
+  <div class="row">
+    <div class="rowPrincipal col-12 col-sm-12">
       <router-outlet></router-outlet>
     </div>
   </div>
