Implement log out function

--- a/bq-project/src/app/home/home.component.html
+++ b/bq-project/src/app/home/home.component.html
@@ -68,7 +68,7 @@
           <i class="fa-solid fa-cubes"></i> Pedidos
         </button>
         <div class="out-btn">
-          <button type="button" class="btn-out">
+          <button type="button" class="btn-out" (click)="logOut()">
             <i class="fa-solid fa-right-from-bracket"></i> Cerrar Sesión
           </button>
         </div>
