--- a/bq-project/src/app/admin/admin.component.html
+++ b/bq-project/src/app/admin/admin.component.html
@@ -65,7 +65,7 @@
           <i class="fa-solid fa-cubes"></i> Productos
         </button>
         <div class="out-btn">
-          <button type="button" class="btn-out">
+          <button type="button" class="btn-out" (click)="logOut()">
             <i class="fa-solid fa-right-from-bracket"></i> Cerrar Sesión
           </button>
         </div>
