--- a/bq-project/src/app/home/home-pedidos/home-pedidos-list/home-pedidos-list.component.scss
+++ b/bq-project/src/app/home/home-pedidos/home-pedidos-list/home-pedidos-list.component.scss
@@ -7,10 +7,10 @@
     border-radius: 1.5rem;
 }
 
-.btn {
-    background-color: #8CC63F;
-    border-radius: 50%;
-    border-color: none;
-    color: #fff;
-    margin-right: 2em;
-}
+// .btn {
+//     background-color: #8CC63F;
+//     border-radius: 50%;
+//     border-color: none;
+//     color: #fff;
+//     margin-right: 2em;
+// }
